# em_gateway

./: README.md  pyproject.toml
src/em_gateway/: __init__.py  app.py  app_config.py  gateway_config.py  main.py  sdm630_emulator.py
testing/: dual_virtual_com_port_dump.sh  physical_virtual_com_port_dump.sh
